<resources>
    <string name="app_name">PigApp</string>
    <string name="enter">Enter player names</string>
    <string name="player1">Player 1:</string>
    <string name="player2">Player 2:</string>
    <string name="starty">Play 2 die Pig</string>
    <string name="start">Start Game</string>
    <string name="d1">1</string>
    <string name="d2">2</string>
    <string name="d3">3</string>
    <string name="d4">4</string>
    <string name="current">Current Player</string>
    <string name="roll">Roll</string>
    <string name="stop">Stop</string>
    <string name="score">Scores</string>
    <string name="total">Total roll</string>
    <string name="rolls">Roll Results</string>
    <string name="cong">Congratulations!</string>
    <string name="win">You Won!</string>
</resources>
