<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:textColor="#000000" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="90dp" android:textSize="16sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/player1Name"
            android:textSize="16sp" android:layout_marginStart="1dp"
            app:layout_constraintStart_toEndOf="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="78dp" android:textColor="#000000" android:minHeight="48dp"/>
    <TextView
            android:text="@string/player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:textSize="16sp" android:textColor="#000000" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/player2Name"
            android:textSize="16sp" android:textColor="#000000" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="1dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/player1Name" android:minHeight="48dp"/>
    <TextView
            android:text="@string/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:textSize="16sp" android:textColor="#000000" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="85dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"/>
    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/startButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="85dp" android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/images" android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp" android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/startButton"/>
    <TextView
            android:text="@string/starty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            android:textColor="#000000" android:textSize="20sp"
            android:layout_marginTop="22dp" app:layout_constraintTop_toBottomOf="@+id/player2Name"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="90dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>