<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PigGame">

    <TextView
            android:text="@string/current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            android:textColor="#000000" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="100dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/CurrentPlayer"
            android:text="hlpe" android:textColor="#000000"
            android:textAlignment="center" android:textSize="16sp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="125dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/p1Score"
            android:textColor="#000000"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/CurrentPlayer" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="42dp" android:textAlignment="center"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/p2Score"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/CurrentPlayer" android:layout_marginStart="90dp"
            app:layout_constraintStart_toEndOf="@+id/p1Score" android:textColor="#000000"
            android:textAlignment="center"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Score1"
            android:textColor="#1A237E" android:background="#A39696"
            android:layout_marginTop="2dp" app:layout_constraintTop_toBottomOf="@+id/p1Score"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="42dp"
            android:textAlignment="center"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Score2"
            android:textColor="#1A237E" android:background="#A39696" android:layout_marginStart="90dp"
            app:layout_constraintStart_toEndOf="@+id/Score1" android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/p2Score" android:textAlignment="center"/>
    <Button
            android:text="@string/roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/roll"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="26dp"
            android:layout_marginTop="27dp" app:layout_constraintTop_toBottomOf="@+id/Score1"/>
    <Button
            android:text="@string/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/stop"
            android:layout_marginTop="27dp"
            app:layout_constraintTop_toBottomOf="@+id/Score2" android:layout_marginStart="63dp"
            app:layout_constraintStart_toEndOf="@+id/roll"/>
    <TextView
            android:text="@string/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView12"
            android:textColor="#000000" android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/CurrentPlayer" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="123dp"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/totalRoll"
            android:textColor="#000000" android:background="#9F9F9F"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            android:textSize="20sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="144dp"/>
    <TextView
            android:text="@string/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView14"
            android:textColor="#000000"
            android:textSize="20sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="111dp" android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/roll"/>
</androidx.constraintlayout.widget.ConstraintLayout>